# hillclimber

./: .gitignore  CLAUDE.md  PLAN-harness-traces.md  README.md  main.py  pyproject.toml  skills-lock.json
fe/: TELEGRAM_FEEDBACK.md  package.json  pnpm-lock.yaml
fe/src/app/: globals.css  layout.tsx  page.tsx
fe/src/app/docs/: page.tsx
fe/src/lib/: site.ts  telegram.ts
src/harnesses/: __init__.py  _proc.py  base.py  claude.py
src/hillclimber/: __init__.py  config.py  git_utils.py  lockfile.py  models.py  progress.py  prompt.py  run.py  scoring.py  telemetry.py
src/hillclimber/cli/: __init__.py  app.py  banner.py  console.py  live.py  render.py  state.py  tracelog.py
src/hillclimber/harnesses/: __init__.py  _proc.py  base.py  claude.py
src/hillclimber/sandboxes/: __init__.py  base.py  passthrough.py  seatbelt.py
src/hillclimber/strategies/: __init__.py  base.py  chain.py  registry.py
src/sandboxes/: __init__.py  base.py  passthrough.py  seatbelt.py
src/strategies/: base.py  chain.py  prompt.py  registry.py
test_projects/slow_stats/: README.md  eval.py  hillclimber.toml  slow_stats.py
tests/: test_chain_cycle.py  test_cli_check.py  test_cli_feedback.py  test_cli_init.py  test_cli_live.py  test_cli_run.py  test_cli_status.py  test_config.py  test_git_utils.py  test_harness_claude.py  test_hillclimber_core.py  test_lockfile.py  test_models.py  test_ocr_project.py  test_sandbox.py  test_scoring.py  test_strategy_registry.py  test_telemetry.py
tests/example_project_folders/: eval.py  hillclimber.toml
tests/example_project_folders/eval_file_doent_return_Eval/: eval.py
tests/example_project_folders/no_toml_file/: .gitkeep
tests/ocr_example_project/: eval.py  hillclimber.toml  main.py  ocr_pipeline.py  pyproject.toml
(+18 files in other folders)
