[project]
name = "hillclimber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mistralai>=2.5.0",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.optional-dependencies]
# Vendor-neutral log export. Install with `uv sync --extra otel` (or
# `pip install 'hillclimber[otel]'`) and point OTEL_EXPORTER_OTLP_ENDPOINT at any
# OTEL-compatible backend; see hillclimber.telemetry.
otel = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[project.scripts]
hillclimber = "hillclimber.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hillclimber"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.13",
    "ty>=0.0.1a1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = ["E501"]  # Line length is enforced by the formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"
root = ["./src", "./tests", "./test_projects/slow_stats"]  # each test project dir is its own import root

[tool.ty.rules]
# Surface implicit/missing annotations as errors rather than warnings.
possibly-unresolved-reference = "error"
